styles/layout.css
:root {
  /* default theme color */
  /* can be overrided by uses `themeConfig` option */
  --slidev-theme-primary: #5d8392;

  /* Brand colors */
  --puzzle-brand1: #1e5a96; /* Dark Blue */
  --puzzle-brand2: #3b7bbe; /* Bright Navy Blue */
  --puzzle-brand3: #238bca; /* Green Blue Crayola */
  --puzzle-brand4: #3fa8e0; /* Carolina Blue */
  --puzzle-brand5: #46bcc0; /* Maximum Blue Green */
  --puzzle-brand6: #2c97a6; /* Blue Munsell */
  --puzzle-brand7: #69b978; /* Emerald */
  --puzzle-brand8: #61b44b; /* Brilliant Green */
  --puzzle-brand9: #1b2d53; /* Prussian Blue */

  --slidev-font-weight-base: 300;
}

/* General */

body {
  font-weight: 300;
}

.slidev-layout h1,
.slidev-layout h2,
.slidev-layout h3,
.slidev-layout h4 {
  font-weight: 400;
}

.slidev-layout h1 {
  color: var(--puzzle-brand9);
}

.slidev-layout h2 {
  color: var(--puzzle-brand2);
}

.slidev-layout a {
  color: var(--puzzle-brand4);
  border-style: solid;
}

.slidev-layout.cover,
.slidev-layout.intro {
  @apply h-full grid;

  h1 {
    @apply text-6xl leading-20;
  }

  h1 + p {
    @apply -mt-2 opacity-50 mb-4;
  }

  p + h2,
  ul + h2,
  table + h2 {
    @apply mt-10;
  }
}

/* Layout "cover */

.slidev-layout.cover {
  grid-template-rows: min-content 1fr;

  background-color: var(--puzzle-brand9);
  color: white;
  background-image: url("../images/cover.png");
  background-repeat: no-repeat;
  background-position: right bottom;
  background-size: 300px;
}

.slidev-layout.cover .logo {
  height: 50px;
}

.slidev-layout.cover h1 {
  font-size: 70px;
  line-height: 1.15;
  color: white;
}

.slidev-layout.cover h1 .highlight {
  color: var(--puzzle-brand4);
}

.slidev-layout.cover h1 + p {
  @apply mb-0;
  opacity: 1;
  font-size: 24px;
  line-height: 1.25;
}

/* Layout "intro" */

.slidev-layout.intro {
  background-color: var(--puzzle-brand8);
}

.slidev-layout.intro h1 {
  color: white;
  line-height: 1.15;
}

.slidev-layout.intro h1 .highlight {
  color: var(--puzzle-brand9);
}

/* Layout "end" */

.slidev-layout.end {
  grid-template-rows: min-content 1fr;

  background-color: var(--puzzle-brand9) !important;
  color: white !important;
  background-image: url("../images/cover.png");
  background-repeat: no-repeat;
  background-position: right bottom;
  background-size: 400px;
  text-align: left !important;
}

.slidev-layout.end h1 {
  font-size: 70px;
  line-height: 1.15;
  color: white;
}

.slidev-layout.end p {
  font-size: 32px;
  line-height: 1.25;
}

.slidev-layout.end a {
  border-bottom: 0;
  color: var(--puzzle-brand3);
}

.slidev-layout.end [text-main=""] {
  color: white;
}

/* Layout "agenda" */

.slidev-layout.agenda {
  background-image: url("../images/agenda.png");
  background-repeat: no-repeat;
  background-position: right bottom;
  background-size: 300px;
}

.slidev-layout.agenda ol.slidev-toc-list {
  list-style: disc;
}

.slidev-layout.agenda h1 {
  font-size: 70px;
  margin-bottom: 0.6em;
}

.slidev-layout.agenda a {
  color: black;
  border: 0;
}

/* Layout "quote" */
.slidev-layout.quote {
  @apply grid h-full;

  h1 + p {
    @apply mt-2;
  }
}

/* Layout "meet" */
.slidev-page:has(.slidev-layout.meet) {
  background: linear-gradient(
    0deg,
    var(--puzzle-brand7) 0%,
    var(--puzzle-brand7) 50%,
    white 50%
  );
  padding: 1rem;
}

.slidev-layout.meet {
  background-color: var(--puzzle-brand2);
  border-radius: 2rem;
}

.slidev-layout.meet .members {
  display: flex;
  align-items: start;
  justify-content: space-around;
}

.slidev-layout.meet,
.slidev-layout.meet h1,
.slidev-layout.meet a {
  color: white;
}

.slidev-layout.meet h1 {
  font-size: 70px;
  margin-bottom: 3rem;
}

.slidev-layout.meet .members > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.slidev-layout.meet .members > div > img {
  width: 200px;
  margin-bottom: 1rem;
  border-radius: 50%;
}

.slidev-layout.meet .members > div .name,
.slidev-layout.meet .members > div > p:first-of-type {
  font-size: 1.5em;
  margin-bottom: 0;
}

.slidev-layout.meet .members > div .title,
.slidev-layout.meet .members > div p:last-of-type {
  font-size: 1.2em;
}

.slidev-layout.meet .members > div p:last-of-type a {
  font-size: 1.1rem;
}

